Bug 149592 - Importing SVG with too small scaling causes bad performance
Summary: Importing SVG with too small scaling causes bad performance
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
6.3.0.4 release
Hardware: x86-64 (AMD64) All
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 inReleaseNotes:26.2
Keywords: filter:svg, perf
Depends on:
Blocks: Performance
  Show dependency treegraph
 
Reported: 2022-06-17 08:13 UTC by Buovjaga
Modified: 2025-10-07 14:13 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2022-06-17 08:13:54 UTC
Spin-off from bug 101083, mentioned by paulystefan.

1. Download attachment 127932 [details] (simple example)
2. Rather than using Insert - Image, open the file as a drawing by dragging it onto Start center

It takes dozens of seconds to open and makes LibreOffice very slow.

Seen already in the oldest of 6.3 Linux bibisect repo.

Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 1638b4f78af70b7b97d0a081ed51390dd87bf1f9
CPU threads: 2; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: fi-FI (fi_FI); UI: en-US
Calc: threaded Jumbo
Comment 1 Commit Notification 2025-09-09 13:41:28 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f109008fea11d0b837778c2d2ed77e15497fe3df

tdf#149592 Importing SVG with too small scaling causes bad performance

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Buovjaga 2025-09-09 18:25:43 UTC
Now import only takes 12 secs while with 25.8 it takes minutes (can't measure exact time as this laptop has some weird GPU corruption issue when things get hot).

Clicking in the vertical scrollbar trough takes instant painting action, if the object moves out of view, but takes 6 seconds if it moves in view.

Arch Linux
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6fc54eea2f904a6704495f6b53fd5eff0dff1496
CPU threads: 16; OS: Linux 6.16; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 9 Sept 2025