tdf#149592 Importing SVG with too small scaling causes bad performance

decomposing pattern-fill primitives is very bad for performance

Change-Id: Id754e55350b6a75e4f585db890397e6bb7380867
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190707
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>