drawinglayer/source/processor2d/hittestprocessor2d.cxx
@@ -497,6 +497,7 @@ namespace drawinglayer::processor2d
                 case PRIMITIVE2D_ID_PAGEPREVIEWPRIMITIVE2D :
                 case PRIMITIVE2D_ID_MEDIAPRIMITIVE2D:
                 case PRIMITIVE2D_ID_ANIMATEDGRAPHICPRIMITIVE2D:
+                case PRIMITIVE2D_ID_PATTERNFILLPRIMITIVE2D:
                 {
                     if(!getHitTextOnly())
                     {
